aligned/formatted buttons & fixed bg image

--- a/pg2.css
+++ b/pg2.css
@@ -1,7 +1,6 @@
 html, body {
-  height: 100%;
   background-size: cover;
-  background:url(images/living-room-small.png) no-repeat center center fixed;
+  background:url(images/living-room-med.png) no-repeat center center fixed;
 }
 
 h1{
@@ -13,9 +12,40 @@ h1{
     border: 2px solid green;
 }
 
-.left-column{
-  width:66%;
+.container {
+  height: 300px;
+  position: relative;
 }
+
+.vertical-center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.column {
+  float: left;
+  width:33.33%
+}
+
+.row{
+  width:100%;
+  height:33.33%;
+}
+
+/* .left, .right {
+  width: 25%;
+}
+
+.middle {
+  width: 50%;
+} */
 
 #actionButton{
   text-align: center;
@@ -32,11 +62,17 @@ h1{
 #actionButton2{
   text-align:center;
   background-color: rgb(25, 88, 88);
-  border: 2px solid green;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  border: 2px;
   color: white;
   padding:10px 24px;
-  width:50px;
+  width:100px;
+  
   display:block;
+}
+
+#background-container {
+  background-size: contain;
 }
 
 .button-group button{
@@ -45,8 +81,10 @@ h1{
   border: 2px solid green;
   color: white;
   padding:10px 24px;
-  width:50px;
+  width:100px;
   display:block;
+  /* box-shadow: 0px 0px 5px 5px #000000 ; */
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5)
 }
 
 .button-group button:not(:last-child){
